...
            "state" : "translated",
            "value" : "Alışverişe başla"
          }
        }
      }
    },
    "home.categories.seeAll" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "See All"
...
            "state" : "translated",
            "value" : "Dil"
          }
        }
      }
    },
    "profile.logout" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Logout"
          }
...
            "state" : "translated",
            "value" : "Anasayfa"
          }
        }
      }
    },
    "tab.profile" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Profile"
          }
...
